--- a/Experience.css
+++ b/Experience.css
@@ -6,9 +6,13 @@
     position:relative;
     top: 250px;
     left:1125px;
+    background-color: rgb(56, 20, 155);
     }
     .experience{
         background-image: url(Assets/FreeJumpingGreatWhite.jpg);
         background-size:cover;
         background: position 100%;
+    }
+    p {
+        color: rgb(56, 20, 155);
     }
